# XPlayer

./: .gitignore  .gitmodules  CMakeLists.txt  audiomanager.cpp  audiomanager.h  audiomanager.ui  audioorbitcontroller.cpp  audioorbitcontroller.h  audioorbitcontroller.ui  clickableprogressbar.cpp  clickableprogressbar.h  devicemanager.cpp  devicemanager.h  devicemanager.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newaudioorbitdialog.cpp  newaudioorbitdialog.h  newaudioorbitdialog.ui  resources.qrc  svgresources.qrc  util.h
include/: AudioManager.h
include/xaudio/engin/: AudioEngin.h
include/xaudio/engin/sdl/: xplayer.h
lib/: libxaudio.dylib
